# modules-template-project-GB

./: CMakeLists.txt  README.md
P1PPRO/: .gitignore
P1PPRO/src/: CMakeLists.txt  main.c  utils_files.h
P1PPRO/src/module_args/: module_args.c
P1PPRO/src/module_io_handler/: module_io_handler.h
P1PPRO/src/module_recursivity_handler/: CMakeLists.txt  module_recursivity_handler.h
P1PPRO/src/module_symbol_resolver/: module_symbol_resolver.c  module_symbol_resolver.h
P1PPRO/src/module_symbol_table/: module_symbol_table.c
P1PPRO/src/module_text_normalizer/: CMakeLists.txt  module_text_normalizer.c  module_text_normalizer.h
P1PPRO/tests/: test_module_args.c  test_module_classifier.h  test_module_io_handler.h  test_module_rh.c
P2LEX/: CMakeLists.txt  README.md
P2LEX/src/: CMakeLists.txt  main.c  main.h
P2LEX/src/alphabet/: CMakeLists.txt  alphabet.c  alphabet.h
P2LEX/src/automata/: CMakeLists.txt  automata.c  automata.h
P2LEX/src/controller/: CMakeLists.txt  controller.c  controller.h
P2LEX/src/counter/: CMakeLists.txt  counter.c  counter.h
P2LEX/src/error_handler/: CMakeLists.txt  error_handler.c  error_handler.h
P2LEX/src/global_context/: CMakeLists.txt  global_context.c  global_context.h
P2LEX/src/init/: CMakeLists.txt  init.c  init.h
P2LEX/src/input_handler/: CMakeLists.txt  input_handler.c  input_handler.h
P2LEX/src/language/: CMakeLists.txt  language.c  language.h
P2LEX/src/module_args/: CMakeLists.txt  module_args.c  module_args.h
P2LEX/src/output_handler/: CMakeLists.txt  output_handler.c  output_handler.h
P2LEX/src/scanner/: CMakeLists.txt  scanner.c  scanner.h
P2LEX/src/token/: CMakeLists.txt  token.c  token.h
P2LEX/src/token_handler/: CMakeLists.txt  token_handler.c  token_handler.h
P2LEX/src/token_list/: CMakeLists.txt  token_list.c  token_list.h
P2LEX/tests/: CMakeLists.txt  test_module_automata.c  test_module_counter.c  test_module_counter.h  test_module_error_handler.h  test_module_input_handler.c  test_module_input_handler.h  test_module_output_handler.c  test_module_output_handler.h  test_module_token_handler.c  test_module_token_handler.h
P2LEX/tests/test_files/: input.c  input.cscn
P3PAR/: CMakeLists.txt  README.md
P3PAR/src/: CMakeLists.txt  main.c  main.h  utils_files.h
P3PAR/src/automata/: CMakeLists.txt  automata.c  automata.h
P3PAR/src/counter/: CMakeLists.txt
P3PAR/src/error_handler/: CMakeLists.txt
P3PAR/src/global_context/: CMakeLists.txt  global_context.c  global_context.h
P3PAR/src/input_handler/: CMakeLists.txt  input_handler.c  input_handler.h
P3PAR/src/language/: CMakeLists.txt  language.c  language.h
P3PAR/src/module_args/: module_args.c  module_args.h
P3PAR/src/output_handler/: CMakeLists.txt  output_handler.c  output_handler.h
P3PAR/src/parser/: CMakeLists.txt  parser.c  parser.h
P3PAR/src/scanner/: CMakeLists.txt  scanner.c
P3PAR/src/sra/: CMakeLists.txt  sra.c  sra.h
P3PAR/src/stack/: CMakeLists.txt  stack.c  stack.h
P3PAR/src/token_handler/: token_handler.c  token_handler.h
P3PAR/tests/: CMakeLists.txt  test_module_args.c  test_module_automata.c  test_module_automata.h  test_module_error_handler.c  test_module_global_context.c  test_module_global_context.h  test_module_input.c  test_module_input.h  test_module_language.c  test_module_language.h  test_module_sra.c  test_module_sra.h  test_module_token_handler.c
P3PAR/tests/test_files/: input.cscn  input_file.cscn  input_file_p3dbg.txt  language.txt
src/: CMakeLists.txt  main.c  main.h
src/module_args/: module_args.c  module_args.h
src/module_classifier/: CMakeLists.txt  module_classifier.c  module_classifier.h
src/module_input_handler/: CMakeLists.txt  module_input_handler.c  module_input_handler.h
src/module_io_handler/: CMakeLists.txt  module_io_handler.c  module_io_handler.h
src/module_output_handler/: CMakeLists.txt  module_output_handler.c  module_output_handler.h
src/module_recursivity_handler/: CMakeLists.txt  module_recursivity_handler.c  module_recursivity_handler.h
src/module_symbol_resolver/: CMakeLists.txt  module_symbol_resolver.c  module_symbol_resolver.h
src/module_symbol_table/: CMakeLists.txt  module_symbol_table.c  module_symbol_table.h
src/module_text_normalizer/: CMakeLists.txt  module_text_normalizer.c  module_text_normalizer.h
tests/: CMakeLists.txt  input-example.c  integral_text.c  integral_text.h  integral_text_pp.c  test_module_classifier.c  test_module_input_handler.c  test_module_input_handler.h  test_module_io_handler.c  test_module_rh.c  test_module_rh.h  test_module_symbol_table.c  test_module_symbol_table.h
tests/input-code-example/: input-example.h
